--- a/index.html
+++ b/index.html
@@ -80,10 +80,22 @@
       <div class="index-content">
         <div class="index-content-left">
           <h2 class="index-conten-title">Контактная информация</h2>
+          <p>Барбершоп «Бородинский»<br>
+            Адрес: г. Санкт-петербург, Б. Конюшенная, д. 19/8<br>
+            Телефон: +7 (495) 666-02-66
+          </p>
+          <p>Время работы:<br>
+            пн — пт: с 10:00 до 22:00<br>
+            сб — вс: с 10:00 до 19:00
+          </p>
+          <a class="btn" href="#">Как проехать</a>
+          <a class="btn" href="#">Обратная связь</a>
+        </div>
         <div class="index-content-right">
           <h2 class="index-conten-title">Записаться</h2>
           <p>Укажите желаемую дату и время и
             мы свяжемся с вами для подтверждения брони</p>
+          <form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
             <input type="text" name="date" value="" placeholder="Дата">
             <input type="text" name="time" value="" placeholder="Время">
             <input type="text" name="name" value="" placeholder="Ваше имя">
