--- a/item.html
+++ b/item.html
@@ -1,16 +1,18 @@
 <!DOCTYPE HTML>
 <html lang="ru">
   <head>
-    <meta charset="utf-8">
-    <title>Барбершоп «Бородинский» - Набор для путешествий «Baxter of California» </title>
+    <meta charset="UTF-8">
+    <title>Набор для путешествий «Baxter of California» </title>
   </head>
-  <body>
+
+  <body class="inner-page">
+
     <header class="main-header">
       <div class="container">
-        <div class="header-logo">
-          <img src="img\header-logo.png" width="150px" height="50px" title="Логотип Барбершоп «Бородинский»">
-        </div>
         <nav class="main-navigation">
+          <a class="logo-inner" href="index.html">
+            <img src="img\logo-inner.png" width="150" height="50" title="Логотип Барбершоп «Бородинский»">
+          </a>
           <ul>
             <li>
               <a href="#">Информация</a>
@@ -29,80 +31,81 @@
             </li>
           </ul>
         </nav>
+
         <div class="user-block">
           <a class="login" href="#">Вход</a>
         </div>
       </div>
     </header>
+
     <main class="container">
-      <div class="item-content">
-        <div class="item-content-title">
-          <h2 class="page-title">Набор для путешествий «Baxter of California»</h2>
-          <ul class="page-title">
-            <li>Главная</li>
-            <li>Магазин</li>
-            <li>Средства для ухода</li>
-            <li>Набор для путешествий «Baxter of California»</li>
+      <div class="inner-page-title">
+          <h1>Набор для путешествий «Baxter of California»</h2>
+          <ul class="breadcrumbs">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="shop.html">Магазин</a></li>
+            <li><a href="shop.html">Средства для ухода</a></li>
+            <li class="current">Набор для путешествий «Baxter of California»</li>
           </ul>
-        </div>
-        <div class="item-conten-left">
-          <div class="main-image">
-            <img src="img/baxter-of-california-1" width="300px" height="300px" title="">
-          </div>
-          <div class="previev-image">
-            <img src="img/baxter-of-california-2" width="50px" height="50px" title="">
-          </div> <div class="previev-image">
-            <img src="img/baxter-of-california-3" width="50px" height="50px" title="">
-          </div> <div class="previev-image">
-            <img src="img/baxter-of-california-4" width="50px" height="50px" title="">
-          </div>
-        </div>
-        <div class="item-conten-rigth">
-          <div class="item-available">
-            <p>Есть в наличии</p>
-          </div>
-          <div class="item-vendor-code">
-            <p>Артикул: Dexter-Ae</p>
-          </div>
-          <section class="item-description">
-            Travel Kit – необходимый аксессуар во время любого путешествия. В аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.
-          </section>
-          <div class="item-price">
-            <span>2900 руб.</span>
-            <button class="btn">Купить</button>
-          </div>
-          <div class="item-composition">
-            <h3>В набор входят:</h3>
-            <ul class="rhombus">
-              <li>Средство для умывания (50 мл)</li>
-              <li>Увлажняющий крем (50 мл)</li>
-              <li>Крем для бритья (50 мл)</li>
-              <li>Крем после бриться, шампнунь (50 мл)</li>
-              <li>Удобная кожаная косметичка (50 мл)</li>
-            </ul>
-          </div>
-        </div>
       </div>
-      <footer class="main-footer">
-        <div class="container">
-          <section class="fotter-contacts">
-            Барбершоп «Бородинский»<br>
-            Адрес: г. Санкт-петербург, Б. Конюшенная, д. 19/8<br>
-            <a href="#">Как нас найти?</a><br>
-            Телефон: +7 (495) 666-02-66
-          </section>
-          <section class="fotter-social">
-            <p>Давайте дружить!</p>
-            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-          </section>
-          <section class="fotter-copyrigth">
-            <p>Разработано:</p>
-            <a class="btn" href="#">htmlacademy.ru</a>
-          </section>
-        </div>
-      </footer>
+
+      <div class="main-item clearfix">
+        <section class="photo-gallery">
+          <figure class="photo-gallery-image"
+          <img src="img/baxterBig.jpg" width="300" height="300" title="Набор для путеществий «Baxter of California»">
+          </figure>
+
+          <div class="photo-gallery-block">
+            <img src="img/baxterMin1.jpg" width="50" height="50" title="Набор для путеществий «Baxter of California»">
+            <img src="img/baxterMin2.jpg" width="50" height="50" title="Набор для путеществий «Baxter of California»">
+            <img src="img/baxterMin3.jpg" width="50" height="50" title="Набор для путеществий «Baxter of California»">
+          </div>
+        </section>
+
+        <section class="description">
+          <div class="item-available">
+            <span>Есть в наличии</span>
+            <span class="article">артикул: dexter-ae</span>
+          </div>
+          <p>travel kit – необходимый аксессуар во время любого путешествия. в аккуратной кожаной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха: средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. набор также может стать отличным подарком.</p>
+          <div class="content-item-price price">
+            <span>2900 руб.</span><a class="btn" href="#">Купить</a>
+          </div>
+
+          <h2 class="list-title">В набор входят:</h2>
+          <ul class="rhombus">
+            <li>Средство для умывания (50 мл)</li>
+            <li>Увлажняющий крем (50 мл)</li>
+            <li>Крем для бритья (50 мл)</li>
+            <li>Крем после бриться, шампнунь (50 мл)</li>
+            <li>Удобная кожаная косметичка (50 мл)</li>
+          </ul>
+        </section>
+      </div>
     </main>
+
+    <footer class="main-footer">
+      <div class="container">
+        <section class="fotter-contacts">
+          Барбершоп «Бородинский»<br>
+          Адрес: г. Санкт-петербург, Б. Конюшенная, д. 19/8<br>
+          <a href="#">Как нас найти?</a><br>
+          Телефон: +7 (495) 666-02-66
+        </section>
+
+        <section class="fotter-social">
+          <p>Давайте дружить!</p>
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        </section>
+
+        <section class="fotter-copyrigth">
+          <p>Разработано:</p>
+          <a class="btn" href="#">htmlacademy.ru</a>
+        </section>
+      </div>
+    </footer>
+
   </body>
 <html>
