Верстка shop.html и проверка на ошибки
Верстка страницы shop.html и проверка всех страниц валидатором. Найдены
ошибки и исправлены в Item и shop

--- a/item.html
+++ b/item.html
@@ -11,7 +11,7 @@
       <div class="container">
         <nav class="main-navigation">
           <a class="logo-inner" href="index.html">
-            <img src="img\logo-inner.png" width="150" height="50" title="Логотип Барбершоп «Бородинский»">
+            <img src="img/logo-inner.png" width="150" height="50" alt="Логотип Барбершоп «Бородинский»">
           </a>
           <ul>
             <li>
@@ -40,7 +40,7 @@
 
     <main class="container">
       <div class="inner-page-title">
-          <h1>Набор для путешествий «Baxter of California»</h2>
+          <h2>Набор для путешествий «Baxter of California»</h2>
           <ul class="breadcrumbs">
             <li><a href="index.html">Главная</a></li>
             <li><a href="shop.html">Магазин</a></li>
@@ -51,14 +51,14 @@
 
       <div class="main-item clearfix">
         <section class="photo-gallery">
-          <figure class="photo-gallery-image"
-          <img src="img/baxterBig.jpg" width="300" height="300" title="Набор для путеществий «Baxter of California»">
+          <figure class="photo-gallery-image">
+            <img src="img/baxterBig.jpg" width="300" height="300" alt="Набор для путеществий «Baxter of California»">
           </figure>
 
           <div class="photo-gallery-block">
-            <img src="img/baxterMin1.jpg" width="50" height="50" title="Набор для путеществий «Baxter of California»">
-            <img src="img/baxterMin2.jpg" width="50" height="50" title="Набор для путеществий «Baxter of California»">
-            <img src="img/baxterMin3.jpg" width="50" height="50" title="Набор для путеществий «Baxter of California»">
+            <img src="img/baxterMin1.jpg" width="50" height="50" alt="Набор для путеществий «Baxter of California»">
+            <img src="img/baxterMin2.jpg" width="50" height="50" alt="Набор для путеществий «Baxter of California»">
+            <img src="img/baxterMin3.jpg" width="50" height="50" alt="Набор для путеществий «Baxter of California»">
           </div>
         </section>
 
@@ -86,26 +86,25 @@
 
     <footer class="main-footer">
       <div class="container">
-        <section class="fotter-contacts">
+        <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-петербург, Б. Конюшенная, д. 19/8<br>
           <a href="#">Как нас найти?</a><br>
           Телефон: +7 (495) 666-02-66
         </section>
 
-        <section class="fotter-social">
+        <section class="footer-social">
           <p>Давайте дружить!</p>
           <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
           <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
         </section>
 
-        <section class="fotter-copyrigth">
+        <section class="footer-copyrigth">
           <p>Разработано:</p>
           <a class="btn" href="#">htmlacademy.ru</a>
         </section>
       </div>
     </footer>
-
   </body>
-<html>
+</html>
