--- a/index.html
+++ b/index.html
@@ -107,19 +107,19 @@
     </main>
     <footer class="main-footer">
       <div class="container">
-        <section class="fotter-contacts">
+        <section class="footer-contacts">
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-петербург, Б. Конюшенная, д. 19/8<br>
           <a href="#">Как нас найти?</a><br>
           Телефон: +7 (495) 666-02-66
         </section>
-        <section class="fotter-social">
+        <section class="footer-social">
           <p>Давайте дружить!</p>
           <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
           <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
           <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
         </section>
-        <section class="fotter-copyrigth">
+        <section class="footer-copyrigth">
           <p>Разработано:</p>
           <a class="btn" href="#">htmlacademy.ru</a>
         </section>
